--- a/testing/Untitled.ipynb
+++ b/testing/Untitled.ipynb
@@ -225,12 +225,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "2ccd9f51-83c2-43f1-bfbc-dcca9a5c0204",
    "metadata": {},
    "outputs": [],
    "source": [
-    "s = [1,2,3,4]"
+    "n = 4\n",
+    "\n",
+    "graph = [[] for _ in range(n+1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "7b7960fe-9623-4e4a-8cf5-38256aac9bd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[], [], [], [], []]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "graph"
    ]
   },
   {
