--- a/DP/test.ipynb
+++ b/DP/test.ipynb
@@ -2,33 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "05da2510-34da-4a79-a131-73fc06b62981",
    "metadata": {},
    "outputs": [],
    "source": [
-    "arr = [[1,3,3,2],[2,1,4,1],[0,6,4,7]]"
+    "arr = [[7], [3, 8], [8, 1, 0], [2, 7, 4, 4], [4, 5, 2, 6, 5]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "b4a04767-3511-42d6-8e74-518c8abecd6a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[1, 3, 3, 2], [2, 1, 4, 1], [0, 6, 4, 7]]"
+       "[7]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arr"
+    "arr[0]"
    ]
   },
   {
