--- a/test.ipynb
+++ b/test.ipynb
@@ -7,17 +7,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from itertools import combinations\n"
+    "from itertools import combinations\n",
+    "from operator import add"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "ae2c1940-8ec2-4fdb-828b-0ccc3048635d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "N = 6"
+    "5  % 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9d54258b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[sum(x) for x in zip([0,0], [0,1])]"
    ]
   },
   {
