--- a/test.ipynb
+++ b/test.ipynb
@@ -13,12 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ae2c1940-8ec2-4fdb-828b-0ccc3048635d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "arr = [[1,2,3,4],[5,6,7,8],[9,10,11,12]]"
+    "for i in range(7, 5, -1):\n",
+    "    print(i)"
    ]
   },
   {
